...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XN3-Px-6DE">
                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                <subviews>
                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zp1-m9-Zb5">
                                        <rect key="frame" x="20" y="698" width="353" height="45"/>
                                        <color key="backgroundColor" name="Medium Sky Blue"/>
                                        <accessibility key="accessibilityConfiguration" identifier="enter-ip-address-button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="TUS-zI-yrA"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Enter">
...
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="192.168." placeholder="192.168.X.XXX" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="PfV-iT-HQT">
                                        <rect key="frame" x="20" y="198" width="353" height="32"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ip-address-text-field"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="26"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="go"/>
                                    </textField>
                                </subviews>
                                <color key="backgroundColor" name="Dark Midnight Blue"/>
...
